--- a/PixelExplorer.vcxproj
+++ b/PixelExplorer.vcxproj
@@ -314,6 +314,7 @@
   <ItemGroup>
     <ClInclude Include="src\chunk\Block.h" />
     <ClInclude Include="src\chunk\Chunk.h" />
+    <ClInclude Include="src\chunk\ChunkManager.h" />
     <ClInclude Include="src\engine\IndexBuffer.h" />
     <ClInclude Include="src\engine\Material.h" />
     <ClInclude Include="src\engine\Mesh.h" />
