--- a/PixelExplorer.vcxproj
+++ b/PixelExplorer.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="src\chunk\Block.cpp" />
     <ClCompile Include="src\chunk\Chunk.cpp" />
     <ClCompile Include="src\chunk\ChunkManager.cpp" />
+    <ClCompile Include="src\chunk\ChunkPositionQueue.cpp" />
     <ClCompile Include="src\engine\IndexBuffer.cpp" />
     <ClCompile Include="src\engine\Material.cpp" />
     <ClCompile Include="src\engine\Mesh.cpp" />
@@ -316,6 +317,7 @@
     <ClInclude Include="src\chunk\Block.h" />
     <ClInclude Include="src\chunk\Chunk.h" />
     <ClInclude Include="src\chunk\ChunkManager.h" />
+    <ClInclude Include="src\chunk\ChunkPositionQueue.h" />
     <ClInclude Include="src\engine\IndexBuffer.h" />
     <ClInclude Include="src\engine\Material.h" />
     <ClInclude Include="src\engine\Mesh.h" />
