--- a/PixelExplorer.vcxproj
+++ b/PixelExplorer.vcxproj
@@ -156,7 +156,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
-    <ClCompile Include="src\chunk\Block.cpp" />
+    <ClCompile Include="src\chunk\BlockBase.cpp" />
     <ClCompile Include="src\chunk\Chunk.cpp" />
     <ClCompile Include="src\chunk\ChunkManager.cpp" />
     <ClCompile Include="src\chunk\ChunkPositionQueue.cpp" />
@@ -315,6 +315,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\chunk\Block.h" />
+    <ClInclude Include="src\chunk\BlockBase.h" />
     <ClInclude Include="src\chunk\Chunk.h" />
     <ClInclude Include="src\chunk\ChunkManager.h" />
     <ClInclude Include="src\chunk\ChunkPositionQueue.h" />
