--- a/PixelExplorer.vcxproj.filters
+++ b/PixelExplorer.vcxproj.filters
@@ -1378,6 +1378,9 @@
     <ClInclude Include="src\chunk\Block.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\engine\vendor\FastNoiseLite.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\textures\textures.png">
