--- a/PixelExplorer.vcxproj.filters
+++ b/PixelExplorer.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="src\chunk\ChunkGenerator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\chunk\TimedChunkPositionQueue.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shaders\Basic.shader" />
@@ -1385,6 +1388,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\chunk\ChunkGenerator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\chunk\TimedChunkPositionQueue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
