--- a/PixelExplorer.vcxproj
+++ b/PixelExplorer.vcxproj
@@ -158,9 +158,9 @@
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\chunk\BlockBase.cpp" />
     <ClCompile Include="src\chunk\Chunk.cpp" />
-    <ClCompile Include="src\chunk\ChunkGenerator.cpp" />
     <ClCompile Include="src\chunk\ChunkManager.cpp" />
     <ClCompile Include="src\chunk\ChunkPositionQueue.cpp" />
+    <ClCompile Include="src\chunk\generator\PerlinChunkGenerator.cpp" />
     <ClCompile Include="src\chunk\TimedChunkPositionQueue.cpp" />
     <ClCompile Include="src\engine\IndexBuffer.cpp" />
     <ClCompile Include="src\engine\Material.cpp" />
@@ -319,9 +319,10 @@
     <ClInclude Include="src\chunk\Block.h" />
     <ClInclude Include="src\chunk\BlockBase.h" />
     <ClInclude Include="src\chunk\Chunk.h" />
-    <ClInclude Include="src\chunk\ChunkGenerator.h" />
+    <ClInclude Include="src\chunk\generator\ChunkGenerator.h" />
     <ClInclude Include="src\chunk\ChunkManager.h" />
     <ClInclude Include="src\chunk\ChunkPositionQueue.h" />
+    <ClInclude Include="src\chunk\generator\PerlinChunkGenerator.h" />
     <ClInclude Include="src\chunk\TimedChunkPositionQueue.h" />
     <ClInclude Include="src\engine\IndexBuffer.h" />
     <ClInclude Include="src\engine\Material.h" />
