--- a/PixelExplorer.vcxproj
+++ b/PixelExplorer.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="src\chunk\Chunk.cpp" />
     <ClCompile Include="src\chunk\ChunkManager.cpp" />
     <ClCompile Include="src\chunk\ChunkPositionQueue.cpp" />
+    <ClCompile Include="src\chunk\generator\FlatChunkGenerator.cpp" />
     <ClCompile Include="src\chunk\generator\PerlinChunkGenerator.cpp" />
     <ClCompile Include="src\chunk\TimedChunkPositionQueue.cpp" />
     <ClCompile Include="src\engine\IndexBuffer.cpp" />
@@ -322,6 +323,7 @@
     <ClInclude Include="src\chunk\generator\ChunkGenerator.h" />
     <ClInclude Include="src\chunk\ChunkManager.h" />
     <ClInclude Include="src\chunk\ChunkPositionQueue.h" />
+    <ClInclude Include="src\chunk\generator\FlatChunkGenerator.h" />
     <ClInclude Include="src\chunk\generator\PerlinChunkGenerator.h" />
     <ClInclude Include="src\chunk\TimedChunkPositionQueue.h" />
     <ClInclude Include="src\engine\IndexBuffer.h" />
