--- a/PixelExplorer.vcxproj
+++ b/PixelExplorer.vcxproj
@@ -170,6 +170,7 @@
     <ClCompile Include="src\engine\IndexBuffer.cpp" />
     <ClCompile Include="src\engine\Material.cpp" />
     <ClCompile Include="src\engine\Mesh.cpp" />
+    <ClCompile Include="src\engine\PointCull.cpp" />
     <ClCompile Include="src\engine\Renderer.cpp" />
     <ClCompile Include="src\engine\Shader.cpp" />
     <ClCompile Include="src\engine\Texture.cpp" />
@@ -334,6 +335,7 @@
     <ClInclude Include="src\engine\IndexBuffer.h" />
     <ClInclude Include="src\engine\Material.h" />
     <ClInclude Include="src\engine\Mesh.h" />
+    <ClInclude Include="src\engine\PointCull.h" />
     <ClInclude Include="src\engine\RefCounted.h" />
     <ClInclude Include="src\engine\Renderer.h" />
     <ClInclude Include="src\engine\Shader.h" />
