--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -179,12 +179,7 @@
     <ClCompile Include="src\engine\vendor\stb_image\stb_image.cpp" />
     <ClCompile Include="src\engine\VertexArray.cpp" />
     <ClCompile Include="src\engine\VertexBuffer.cpp" />
-    <ClCompile Include="src\PhyTest.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
-    </ClCompile>
+    <ClCompile Include="src\PhysicsMesh.cpp" />
     <ClCompile Include="src\Player.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -635,6 +630,7 @@
     <ClInclude Include="src\engine\VertexBuffer.h" />
     <ClInclude Include="src\engine\VertexBufferAttrib.h" />
     <ClInclude Include="src\engine\VertexBufferLayout.h" />
+    <ClInclude Include="src\PhysicsMesh.h" />
     <ClInclude Include="src\Player.h" />
   </ItemGroup>
   <ItemGroup>
