--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -312,6 +312,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\chunk\block\Block.h" />
+    <ClInclude Include="src\chunk\block\BlockFace.h" />
+    <ClInclude Include="src\chunk\block\RawBlock.h" />
     <ClInclude Include="src\chunk\Chunk.h" />
     <ClInclude Include="src\RefCounted.h" />
     <ClInclude Include="src\rendering\Material.h" />
