--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -384,7 +384,7 @@
     <ClInclude Include="src\chunk\block\BlockData.h" />
     <ClInclude Include="src\chunk\block\ChunkBlock.h" />
     <ClInclude Include="src\chunk\block\BlockFace.h" />
-    <ClInclude Include="src\chunk\block\RawBlock.h" />
+    <ClInclude Include="src\chunk\block\BaseBlock.h" />
     <ClInclude Include="src\chunk\Chunk.h" />
     <ClInclude Include="src\chunk\FaceDirection.h" />
     <ClInclude Include="src\RefCounted.h" />
