--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -231,6 +231,7 @@
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\chunk\block\BaseBlock.cpp" />
     <ClCompile Include="SRC\CHUNK\Chunk.cpp" />
+    <ClCompile Include="src\chunk\ChunkManager.cpp" />
     <ClCompile Include="src\rendering\Material.cpp" />
     <ClCompile Include="src\rendering\Renderable.cpp" />
     <ClCompile Include="src\rendering\Renderer.cpp" />
@@ -387,6 +388,7 @@
     <ClInclude Include="src\chunk\block\BlockFace.h" />
     <ClInclude Include="src\chunk\block\BaseBlock.h" />
     <ClInclude Include="src\chunk\Chunk.h" />
+    <ClInclude Include="src\chunk\ChunkManager.h" />
     <ClInclude Include="src\chunk\FaceDirection.h" />
     <ClInclude Include="src\RefCounted.h" />
     <ClInclude Include="src\rendering\Material.h" />
