--- a/PhysX/physx/compiler/vc16win32/sdk_source_bin/PhysXFoundation.vcxproj
+++ b/PhysX/physx/compiler/vc16win32/sdk_source_bin/PhysXFoundation.vcxproj
@@ -94,7 +94,7 @@
       <OmitFramePointers>true</OmitFramePointers>
       <Optimization>Disabled</Optimization>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
-      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <RuntimeTypeInfo>false</RuntimeTypeInfo>
       <StringPooling>true</StringPooling>
       <TreatWarningAsError>true</TreatWarningAsError>
