Add SubPackageId class

--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -480,6 +480,7 @@
     <ClInclude Include="src\chunk\ChunkManager.h" />
     <ClInclude Include="src\chunk\FaceDirection.h" />
     <ClInclude Include="src\Package.h" />
+    <ClInclude Include="src\package\SubPackageId.h" />
     <ClInclude Include="src\physics\PhysicsManager.h" />
     <ClInclude Include="src\RefCounted.h" />
     <ClInclude Include="src\rendering\Material.h" />
